Added Minecraft Downloader
This is a experimental feature. It fetch a version manifest in my own webserver and will get latest stable/beta build of Minecraft for you.

--- a/BlueSky.csproj
+++ b/BlueSky.csproj
@@ -89,6 +89,9 @@
     <Compile Include="DevCheck.xaml.cs">
       <DependentUpon>DevCheck.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MCDownloader.xaml.cs">
+      <DependentUpon>MCDownloader.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
@@ -112,6 +115,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MCDownloader.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Settings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
