--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v1
       name: Checkout
      
-    - name: Setup MSBuild Path
-      uses: warrenbuckley/Setup-MSBuild@v1
+    - name: MSBuild
+      uses: microsoft/setup-msbuild@v1.0.2
        
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.2
@@ -20,7 +20,7 @@ jobs:
     - name: Restore NuGet Packages
       run: nuget restore SimpleFrameworkApp.sln
  
-    - name: Build and Publish Web App
+    - name: Build 
       run: msbuild BlueSky.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
  
     - name: Upload BlueSky
