--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: BlueSky
-        path: bin\Release\Publish
+        path: bin\
