--- a/BlueSkyNew.csproj
+++ b/BlueSkyNew.csproj
@@ -14,16 +14,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit.Forms.UI.Controls.WebView" Version="6.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Management.Automation">
       <HintPath>C:\Users\ClickNin\Downloads\bluesky-beta-9-early-access\System.Management.Automation.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Windows" />
+    <Reference Include="Windows">
+      <HintPath>C:\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.22000.0\Windows.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
 
