--- a/BlueSky.csproj
+++ b/BlueSky.csproj
@@ -68,6 +68,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\System.Management.Automation.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -89,9 +90,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Libaries\injector.cs" />
+    <Compile Include="Libaries\launcher.cs" />
     <Compile Include="Libaries\main.cs" />
     <Compile Include="Libaries\NonDLL.cs" />
     <Compile Include="Libaries\ProcessManager.cs" />
+    <Compile Include="Libaries\test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
